Refocus ACM paper figures and diagnostics